# slupe-ascii-demo

./: .gitignore  .slupe_output.md  NESL_INSTRUCTIONS.md  be_concise.txt  demo_assist.txt  filesystem.txt  fish_prompt.sh  pyproject.toml  requirements.txt  slupe.yml  slupe_input.md  startup.fish
scratch/: artist_1.py  artist_2.py  artist_3.py  artist_old1.py  color_test.py
src/: artist copy.py  artist.py  artist3.py  artist_1.py  artist_2.py  artist_3.py  artist_init.py  watcher.py
